# codex-cli-proxy

./: .gitignore  CLAUDE.md  README.md  config.yaml  index.html  optimization-proposals.html  package.json  requirements.txt  vite.config.ts
.github/workflows/: build.yml
desktop/: .gitignore  electron-builder.yml  package-lock.json  package.json  tsconfig.json
desktop/main/: auto-launch.ts  backend-manager.ts  config-service.ts  index.ts  ipc-handlers.ts  stats-collector.ts  tray-manager.ts  updater.ts
desktop/preload/: preload.ts
desktop/renderer/: index.html
desktop/renderer/css/: style.css
desktop/renderer/js/: app.js  dashboard.js  logs.js  providers.js  settings.js
desktop/resources/backend/: config.yaml
proxy/: Cargo.toml
proxy/src/: config.rs  main.rs  tracer.rs
proxy/src/converter/: response.rs
proxy/src/providers/: bailian.rs  deepseek.rs  moonshot.rs  qwen.rs  siliconflow.rs
proxy/src/reliability/: circuit.rs  concurrency.rs  ratelimit.rs
reports/: daily-review-2026-05-17.html
scripts/: download-python.js  generate-icon.js  setup-python-deps.js
src/: App.tsx  cache.py  config.py  index.css  logger.py  main.py  main.tsx  store.py  tracer.py
src/components/cache/: CachePage.tsx
src/converter/: request.py  response.py
src/hooks/: useBackendStatus.ts  useConfig.ts  useLogStream.ts  useProviders.ts  useStats.ts
src/providers/: __init__.py  base.py  deepseek.py  moonshot.py  siliconflow.py
tests/: conftest.py  test_config.py  test_config_env.py  test_http_pool.py  test_main.py  test_request.py  test_response.py  test_tracer.py
(+34 files in other folders)
