[package]
name = "cli-proxy-sidecar"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
lru = "0.12"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
once_cell = "1"
rand = "0.8"
tokio-stream = "0.1"
async-stream = "0.3"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
axum-test = "15"
wiremock = "0.6"
